add some new feature on dashbord page